# fastAPI-RAG-System

./: .env  Dockerfile  docker-compose.yml  ollama_configs.json  pyproject.toml
src/: run.py
src/apis/: routers.py
src/apps/chat/: schemas.py
src/apps/chat/routes/: chat.py
src/apps/healthcheck/: routes.py
src/services/llms/: enum.py  providers.py  registry.py
test/: chat_with_pdf.sh  choose_provider.sh  post_pdf_file.sh  test_ollama.py
